// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen Component renders correctly 1`] = `
<ScrollView
  style={
    Object {
      "backgroundColor": "#2d2f7f",
    }
  }
  testID="home-screen"
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <Header
      getAssetSource={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "sys": Object {
                  "id": "sD7CKhNJ85Q1A5msV33d6z2ZOpt",
                },
              },
            ],
            Array [
              Object {
                "sys": Object {
                  "id": "i1rG1R19dEi3GJXGmftzSR0C",
                },
              },
            ],
            Array [
              Object {
                "sys": Object {
                  "id": "b9VUE8Pmwhi0JXmZWqL",
                },
              },
            ],
            Array [
              Object {
                "sys": Object {
                  "id": "ZeRTx8wCF",
                },
              },
            ],
          ],
        }
      }
      headerBanners={
        Array [
          Object {
            "contentType": "headerBanner",
            "fields": Object {
              "backgroundColour": "#ff0000",
              "heading": "heading",
              "headingLine2": "headingLine2",
              "heroImage": Object {
                "sys": Object {
                  "id": "un",
                },
              },
              "subHeading": "subHeading",
            },
            "id": "mXO5GEEzEa43BFl2IWb",
            "locale": "en-GB",
            "revision": 1,
          },
          Object {
            "contentType": "headerBanner",
            "fields": Object {
              "backgroundColour": "#ff0000",
              "heading": "heading",
              "headingLine2": "headingLine2",
              "heroImage": Object {
                "sys": Object {
                  "id": "5CL1KU8X302K1Z5z8dNUPMs5c4aS0",
                },
              },
              "subHeading": "subHeading",
            },
            "id": "iEZMo1BLhp5MzUebo",
            "locale": "en-GB",
            "revision": 1,
          },
        ]
      }
      navigation={
        Object {
          "navigate": [MockFunction],
        }
      }
    />
    <ContentPadding
      padding={Object {}}
      style={
        Object {
          "alignSelf": "center",
          "maxWidth": 440,
        }
      }
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 12,
          }
        }
      >
        <Text
          color="blackColor"
          markdown={false}
          markdownStyle={Object {}}
          style={
            Object {
              "color": "rgb(45, 47, 127)",
            }
          }
          type="h2"
        >
          Featured events
        </Text>
        <Touchable
          accessibilityComponentType="button"
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          delayPressIn={50}
          onPress={[Function]}
          testID="view-all"
        >
          <TextLink>
            View all
          </TextLink>
        </Touchable>
      </Component>
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Component
          key="KAHR4"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-KAHR4"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="04cB3DgY396B2i3Mo"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-04cB3DgY396B2i3Mo"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="KH6KDbmv8CCKPzrCGFo7F3"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-KH6KDbmv8CCKPzrCGFo7F3"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="Vglv35495N98k"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-Vglv35495N98k"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
      </Component>
    </ContentPadding>
  </Component>
</ScrollView>
`;

exports[`HomeScreen Component renders max 6 events 1`] = `
<ScrollView
  style={
    Object {
      "backgroundColor": "#2d2f7f",
    }
  }
  testID="home-screen"
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <Header
      getAssetSource={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "sys": Object {
                  "id": "sD7CKhNJ85Q1A5msV33d6z2ZOpt",
                },
              },
            ],
            Array [
              Object {
                "sys": Object {
                  "id": "i1rG1R19dEi3GJXGmftzSR0C",
                },
              },
            ],
            Array [
              Object {
                "sys": Object {
                  "id": "b9VUE8Pmwhi0JXmZWqL",
                },
              },
            ],
            Array [
              Object {
                "sys": Object {
                  "id": "ZeRTx8wCF",
                },
              },
            ],
            Array [
              Object {
                "sys": Object {
                  "id": "3FVY9BK0i55WU3kG",
                },
              },
            ],
            Array [
              Object {
                "sys": Object {
                  "id": "kyr7K991ry2cm2h6vJUr",
                },
              },
            ],
          ],
        }
      }
      headerBanners={
        Array [
          Object {
            "contentType": "headerBanner",
            "fields": Object {
              "backgroundColour": "#ff0000",
              "heading": "heading",
              "headingLine2": "headingLine2",
              "heroImage": Object {
                "sys": Object {
                  "id": "un",
                },
              },
              "subHeading": "subHeading",
            },
            "id": "mXO5GEEzEa43BFl2IWb",
            "locale": "en-GB",
            "revision": 1,
          },
          Object {
            "contentType": "headerBanner",
            "fields": Object {
              "backgroundColour": "#ff0000",
              "heading": "heading",
              "headingLine2": "headingLine2",
              "heroImage": Object {
                "sys": Object {
                  "id": "5CL1KU8X302K1Z5z8dNUPMs5c4aS0",
                },
              },
              "subHeading": "subHeading",
            },
            "id": "iEZMo1BLhp5MzUebo",
            "locale": "en-GB",
            "revision": 1,
          },
        ]
      }
      navigation={
        Object {
          "navigate": [MockFunction],
        }
      }
    />
    <ContentPadding
      padding={Object {}}
      style={
        Object {
          "alignSelf": "center",
          "maxWidth": 440,
        }
      }
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 12,
          }
        }
      >
        <Text
          color="blackColor"
          markdown={false}
          markdownStyle={Object {}}
          style={
            Object {
              "color": "rgb(45, 47, 127)",
            }
          }
          type="h2"
        >
          Featured events
        </Text>
        <Touchable
          accessibilityComponentType="button"
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          delayPressIn={50}
          onPress={[Function]}
          testID="view-all"
        >
          <TextLink>
            View all
          </TextLink>
        </Touchable>
      </Component>
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Component
          key="KAHR4"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-KAHR4"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="04cB3DgY396B2i3Mo"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-04cB3DgY396B2i3Mo"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="KH6KDbmv8CCKPzrCGFo7F3"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-KH6KDbmv8CCKPzrCGFo7F3"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="Vglv35495N98k"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-Vglv35495N98k"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="OyviQD"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-OyviQD"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="9v86OWxd8k324h2dmMY25KX2B7NL"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-9v86OWxd8k324h2dmMY25KX2B7NL"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
      </Component>
    </ContentPadding>
  </Component>
</ScrollView>
`;
